src/Gramatica/GramaticaParser.java
// Generated from D:/ARCHIVOS E/CHIPECH/PROGRAMACION/COMPILADORES2/LAB/olc2vj22_201404278/Proyecto1/src\Gramatica.g4 by ANTLR 4.10.1
package Gramatica;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, PROGRAM=43, END=44, PRINT=45, 
		DIMENSION=46, SIZEARR=47, MENORQUE=48, MAYORQUE=49, MENOR=50, MAYOR=51, 
		IGUALIGUAL=52, DIFIGUAL=53, CHTR1=54, CHTR2=55, LOGICL=56, ID=57, INT=58, 
		REAL=59, STRING1=60, COMMENT=61, WS=62;
	public static final int
		RULE_parse = 0, RULE_linstrucciones = 1, RULE_instruccion = 2, RULE_progmain = 3, 
		RULE_implicit = 4, RULE_declarationVar = 5, RULE_declarationVar2 = 6, 
		RULE_declarationVar3 = 7, RULE_asignationVar = 8, RULE_printt = 9, RULE_printt2 = 10, 
		RULE_printt3 = 11, RULE_lexpr = 12, RULE_decArrExtenso = 13, RULE_decArrCorto = 14, 
		RULE_declarationArray2 = 15, RULE_asigArrList = 16, RULE_asigArrPosEspecifico = 17, 
		RULE_asignationArray2 = 18, RULE_declarationArrayDinamico = 19, RULE_declarationArrayDinamico2 = 20, 
		RULE_asignationArrayDinamico = 21, RULE_desAsignationArrayDinamico = 22, 
		RULE_asignationArrayDinamico2 = 23, RULE_sentenciaIf = 24, RULE_lcondicionesIf = 25, 
		RULE_elseBloque = 26, RULE_doEstructura = 27, RULE_doWhileEstrctura = 28, 
		RULE_controlExit = 29, RULE_controlCycle = 30, RULE_etiquetaDo = 31, RULE_etiquetaDoWhile = 32, 
		RULE_subroutine = 33, RULE_ldeclP = 34, RULE_declParametros = 35, RULE_valorParametros = 36, 
		RULE_call = 37, RULE_funcion = 38, RULE_expr = 39, RULE_type = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "linstrucciones", "instruccion", "progmain", "implicit", "declarationVar", 
			"declarationVar2", "declarationVar3", "asignationVar", "printt", "printt2", 
			"printt3", "lexpr", "decArrExtenso", "decArrCorto", "declarationArray2", 
			"asigArrList", "asigArrPosEspecifico", "asignationArray2", "declarationArrayDinamico", 
			"declarationArrayDinamico2", "asignationArrayDinamico", "desAsignationArrayDinamico", 
			"asignationArrayDinamico2", "sentenciaIf", "lcondicionesIf", "elseBloque", 
			"doEstructura", "doWhileEstrctura", "controlExit", "controlCycle", "etiquetaDo", 
			"etiquetaDoWhile", "subroutine", "ldeclP", "declParametros", "valorParametros", 
			"call", "funcion", "expr", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'implicit'", "'none'", "'::'", "'='", "','", "'*,'", "'('", "')'", 
			"'(/'", "'/)'", "'['", "']'", "'allocatable'", "':'", "'allocate'", "'deallocate'", 
			"'if'", "'else'", "'then'", "'do'", "'while'", "'exit'", "'cycle'", "'subroutine'", 
			"'intent'", "'in'", "'call'", "'function'", "'result'", "'**'", "'-'", 
			"'.not.'", "'*'", "'/'", "'+'", "'.and.'", "'.or.'", "'integer'", "'real'", 
			"'complex'", "'character'", "'logical'", "'program'", "'end'", "'print'", 
			"'dimension'", "'size'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "PROGRAM", "END", "PRINT", 
			"DIMENSION", "SIZEARR", "MENORQUE", "MAYORQUE", "MENOR", "MAYOR", "IGUALIGUAL", 
			"DIFIGUAL", "CHTR1", "CHTR2", "LOGICL", "ID", "INT", "REAL", "STRING1", 
			"COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public LinstruccionesContext linstrucciones() {
			return getRuleContext(LinstruccionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GramaticaParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			linstrucciones();
			setState(83);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinstruccionesContext extends ParserRuleContext {
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public LinstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linstrucciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterLinstrucciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitLinstrucciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitLinstrucciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinstruccionesContext linstrucciones() throws RecognitionException {
		LinstruccionesContext _localctx = new LinstruccionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_linstrucciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			instruccion();
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__19) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__26) | (1L << T__27) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << PROGRAM) | (1L << PRINT) | (1L << ID))) != 0)) {
				{
				{
				setState(86);
				instruccion();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionContext extends ParserRuleContext {
		public ProgmainContext progmain() {
			return getRuleContext(ProgmainContext.class,0);
		}
		public DeclarationVarContext declarationVar() {
			return getRuleContext(DeclarationVarContext.class,0);
		}
		public AsignationVarContext asignationVar() {
			return getRuleContext(AsignationVarContext.class,0);
		}
		public PrinttContext printt() {
			return getRuleContext(PrinttContext.class,0);
		}
		public DecArrExtensoContext decArrExtenso() {
			return getRuleContext(DecArrExtensoContext.class,0);
		}
		public DecArrCortoContext decArrCorto() {
			return getRuleContext(DecArrCortoContext.class,0);
		}
		public AsigArrListContext asigArrList() {
			return getRuleContext(AsigArrListContext.class,0);
		}
		public AsigArrPosEspecificoContext asigArrPosEspecifico() {
			return getRuleContext(AsigArrPosEspecificoContext.class,0);
		}
		public DeclarationArrayDinamicoContext declarationArrayDinamico() {
			return getRuleContext(DeclarationArrayDinamicoContext.class,0);
		}
		public AsignationArrayDinamicoContext asignationArrayDinamico() {
			return getRuleContext(AsignationArrayDinamicoContext.class,0);
		}
		public DesAsignationArrayDinamicoContext desAsignationArrayDinamico() {
			return getRuleContext(DesAsignationArrayDinamicoContext.class,0);
		}
		public SentenciaIfContext sentenciaIf() {
			return getRuleContext(SentenciaIfContext.class,0);
		}
		public DoEstructuraContext doEstructura() {
			return getRuleContext(DoEstructuraContext.class,0);
		}
		public DoWhileEstrcturaContext doWhileEstrctura() {
			return getRuleContext(DoWhileEstrcturaContext.class,0);
		}
		public ControlExitContext controlExit() {
			return getRuleContext(ControlExitContext.class,0);
		}
		public ControlCycleContext controlCycle() {
			return getRuleContext(ControlCycleContext.class,0);
		}
		public EtiquetaDoContext etiquetaDo() {
			return getRuleContext(EtiquetaDoContext.class,0);
		}
		public EtiquetaDoWhileContext etiquetaDoWhile() {
			return getRuleContext(EtiquetaDoWhileContext.class,0);
		}
		public SubroutineContext subroutine() {
			return getRuleContext(SubroutineContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterInstruccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitInstruccion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitInstruccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruccion);
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				progmain();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				declarationVar();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				asignationVar();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(95);
				printt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(96);
				decArrExtenso();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(97);
				decArrCorto();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(98);
				asigArrList();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(99);
				asigArrPosEspecifico();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(100);
				declarationArrayDinamico();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(101);
				asignationArrayDinamico();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(102);
				desAsignationArrayDinamico();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(103);
				sentenciaIf();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(104);
				doEstructura();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(105);
				doWhileEstrctura();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(106);
				controlExit();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(107);
				controlCycle();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(108);
				etiquetaDo();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(109);
				etiquetaDoWhile();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(110);
				subroutine();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(111);
				call();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(112);
				funcion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgmainContext extends ParserRuleContext {
		public List<TerminalNode> PROGRAM() { return getTokens(GramaticaParser.PROGRAM); }
		public TerminalNode PROGRAM(int i) {
			return getToken(GramaticaParser.PROGRAM, i);
		}
		public List<TerminalNode> ID() { return getTokens(GramaticaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramaticaParser.ID, i);
		}
		public ImplicitContext implicit() {
			return getRuleContext(ImplicitContext.class,0);
		}
		public LinstruccionesContext linstrucciones() {
			return getRuleContext(LinstruccionesContext.class,0);
		}
		public TerminalNode END() { return getToken(GramaticaParser.END, 0); }
		public ProgmainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_progmain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterProgmain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitProgmain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitProgmain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgmainContext progmain() throws RecognitionException {
		ProgmainContext _localctx = new ProgmainContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_progmain);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(PROGRAM);
			setState(116);
			match(ID);
			setState(117);
			implicit();
			setState(118);
			linstrucciones();
			setState(119);
			match(END);
			setState(120);
			match(PROGRAM);
			setState(121);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImplicitContext extends ParserRuleContext {
		public ImplicitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_implicit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterImplicit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitImplicit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitImplicit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImplicitContext implicit() throws RecognitionException {
		ImplicitContext _localctx = new ImplicitContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_implicit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(T__0);
			setState(124);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationVarContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DeclarationVar2Context declarationVar2() {
			return getRuleContext(DeclarationVar2Context.class,0);
		}
		public DeclarationVar3Context declarationVar3() {
			return getRuleContext(DeclarationVar3Context.class,0);
		}
		public DeclarationVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterDeclarationVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitDeclarationVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDeclarationVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationVarContext declarationVar() throws RecognitionException {
		DeclarationVarContext _localctx = new DeclarationVarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declarationVar);
		try {
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				type();
				setState(127);
				match(T__2);
				setState(128);
				declarationVar2();
				setState(129);
				declarationVar3();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				type();
				setState(132);
				match(T__2);
				setState(133);
				declarationVar2();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationVar2Context extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GramaticaParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DeclarationVar2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationVar2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterDeclarationVar2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitDeclarationVar2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDeclarationVar2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationVar2Context declarationVar2() throws RecognitionException {
		DeclarationVar2Context _localctx = new DeclarationVar2Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_declarationVar2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(ID);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(138);
				match(T__3);
				setState(139);
				expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationVar3Context extends ParserRuleContext {
		public DeclarationVar2Context declarationVar2() {
			return getRuleContext(DeclarationVar2Context.class,0);
		}
		public DeclarationVar3Context declarationVar3() {
			return getRuleContext(DeclarationVar3Context.class,0);
		}
		public DeclarationVar3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationVar3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterDeclarationVar3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitDeclarationVar3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDeclarationVar3(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationVar3Context declarationVar3() throws RecognitionException {
		DeclarationVar3Context _localctx = new DeclarationVar3Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_declarationVar3);
		try {
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				match(T__4);
				setState(143);
				declarationVar2();
				setState(144);
				declarationVar3();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				match(T__4);
				setState(147);
				declarationVar2();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignationVarContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GramaticaParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AsignationVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignationVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterAsignationVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitAsignationVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitAsignationVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignationVarContext asignationVar() throws RecognitionException {
		AsignationVarContext _localctx = new AsignationVarContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_asignationVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(ID);
			setState(151);
			match(T__3);
			setState(152);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrinttContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(GramaticaParser.PRINT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Printt2Context printt2() {
			return getRuleContext(Printt2Context.class,0);
		}
		public PrinttContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterPrintt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitPrintt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitPrintt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrinttContext printt() throws RecognitionException {
		PrinttContext _localctx = new PrinttContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_printt);
		try {
			setState(162);
			_errHandler.sync(this);
